# pystrict

./: .pylintrc  .travis.yml  LICENSE  README.md  pyproject.toml  pystrict.py  requirements-dev.txt  strict.py  test_strict.py
